cambios en el nombre de la empresa

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     
-    <title>JVF constructores</title>
+    <title>Arqadian Constructora</title>
   </head>
 
 
@@ -71,7 +71,7 @@
             <div class="container">
               <div class="row align-item-center"> <!--"align-item-center" alinea el texto verticalmente-->
                 <div class="col-md-6 offset-md-6 text-center text-md-right"> <!--"-md-6" tira el texto hacia abajo y "offset-md-6" tira el texto hacia la derecha y "text-right" coloca el texto hacia la derecha y "text-center" centra el texto para dispositivos medianos-->
-                  <h1>Bienvenidos a JVF Constructores</h1>
+                  <h1>Bienvenidos a Arqadian Constructora</h1>
                   <p class="d-none d-md-block"> <!--"d-none"  hace desaparecer el texto en dispositivos pequeños y "d-md-block" hace que aparezcan en dispositivos grandes-->
                     Somos una empresa del rubro de la construccion dedicada a realizar proyectos a pequeña,
                     mediana y gran nivel.
